# Biblioteca_virtuala

./: CMakeLists.txt  README.md  main.cpp  main_administrator.cpp  main_utilizator.cpp
administrator/: Administrator.h  Carte.cpp  Carte.h  Utilitare.h
shared/classes/administrator/: Administrator.cpp  Administrator.h  Carte.cpp  Carte.h  Utilitare.cpp  Utilitare.h
shared/classes/gestionareFisiere/: GestionareFisiere.cpp  GestionareFisiere.h
shared/classes/utilizator/: Cos.cpp  Cos.h  Data.cpp  Data.h  Imprumut.cpp  Imprumut.h  Utilizator.cpp  Utilizator.h
utilizator/: Cos.cpp  Cos.h  Imprumut.cpp  Utilizator.cpp  Utilizator.h
